--- a/07-React-Estilos/homework/package.json
+++ b/07-React-Estilos/homework/package.json
@@ -5,9 +5,13 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
+    "css-loader": "^6.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "script-loader": "^0.7.2",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
